--- a/.config/i3/i3blocks/i3blocks.conf
+++ b/.config/i3/i3blocks/i3blocks.conf
@@ -21,10 +21,11 @@
 # urgent
 
 # Global properties
+color=#E0E0E0
 #
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-command=/usr/lib/i3blocks/$BLOCK_NAME
+command=~/.config/i3/i3blocks/scripts/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
@@ -33,10 +34,11 @@ markup=none
 # This displays "ARTIST - SONG" if a music is playing.
 # Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
 [mediaplayer]
-command=~/.config/i3/i3blocks/scripts/$BLOCK_NAME
+command=~/.config/i3/i3blocks/scripts/$BLOCK_NAME |tr '\n' ' '
 instance=spotify
-interval=1
+interval=10
 signal=10
+separator=false
 #
 # Volume indicator
 #
@@ -44,7 +46,7 @@ signal=10
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-label=♪ VOL
+label=
 instance=Master
 #instance=PCM
 interval=1
@@ -55,63 +57,74 @@ signal=10
 #
 # The type defaults to "mem" if the instance is not specified.
 [memory]
-#label=
-separator=true
-interval=30
+label=
+interval=1
+color=#dfe3ee
+separator=false
+
+[memory]
+label=
+instance=swap
+interval=1
+color=#dfe3ee
 
 # Disk usage
 #
 # The directory defaults to $HOME if the instance is not specified.
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
+
 [disk]
-#label=
-#instance=/mnt/data
+label=
+instance=/home/julius
 interval=30
+color=#00FF00
 
 # Network interface monitoring
 #
 # If the instance is not specified, use the interface used for default route.
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
-[iface]
-instance=enp0s25
+
+[cpu_usage]
+label=
+interval=1
+min_width= 100.00%
+separator=false
 color=#00FF00
-interval=10
-separator=true
-
-[wifi]
-instance=wlp1s0
-interval=10
-separator=true
-label=1
-command=~/.config/i3/i3blocks/scripts/$BLOCK_NAME
-
-[load_average]
-interval=5
-
-# Battery indicator
-#
-# The battery instance defaults to 0.
-[battery]
-label=⚡
-#instance=1
-interval=30
-
-# Temperature
-#
-# Support multiple chips, though lm-sensors.
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
 
 [temperature]
-interval=3
+#label=TEMP
+label=🌡
+interval=10
+color=#00FF00
+
+#[iface]
+#label=
+#instance=wifi
+#color=#00FFFF
+#interval=10
+#separator=true
+#color=#adff00
+
+[iface]
+label=
+instance=enp2s0
+color=#00FF00
+interval=10
+separator=false
+
+[bandwidth]
+label=
+instance=enp2s0
+interval=1
+color=#83d0c9
 
 # Date Time
 #
 [time]
-command=date '+%a %d.%m %H:%M'
+command=date '+%a %d.%m %H:%M:%S    '
 #command=timedatectl | grep Local | tr -s '[:space:]'
-interval=5
+interval=1
 
 
 # OpenVPN support
