--- a/.config/i3/config
+++ b/.config/i3/config
@@ -11,9 +11,16 @@
 
 set $mod Mod1
 
+set $bg-color 	         #3f444f
+set $inactive-bg-color   #1f242f
+set $text-color          #f3f4f5
+set $inactive-text-color #676E7D
+set $urgent-bg-color     #E53935
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:DejaVu Sans Mono 12, pango:FontAwesome 10, Terminus 10
+#font pango:System San Francisco Display 10, pango:FontAwesome 10, Terminus 10
+font pango:System San Francisco Display 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -32,11 +39,12 @@ floating_modifier $mod
 # start a terminal
 bindsym $mod+Return exec st
 
+
 # kill focused window
 bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+space exec rofi -show run 
+bindsym $mod+space exec rofi -show run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -89,6 +97,9 @@ bindsym $mod+< focus mode_toggle
 # focus the parent container
 bindsym $mod+a focus parent
 
+#to enable quick switch between revent workspaces
+bindsym Mod1+Tab workspace next
+bindsym Mod1+Shift+Tab workspace prev
 # focus the child container
 #bindsym $mod+d focus child
 
@@ -102,7 +113,7 @@ set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
-set $ws9 "9 - Mail"
+set $ws9 "9"
 set $ws10 "10 - Music"
 
 # switch to workspace
@@ -130,9 +141,9 @@ bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
 # move programs to a certain workspace
-assign [class="Google-chrome"] 2
-assign [class="Firefox"] 2
-for_window [class="Spotify"] move to workspace number 10
+assign [class="Google-chrome"] $ws2
+assign [class="Firefox"] $ws2
+for_window [class="Spotify"] move to workspace number $ws10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -140,6 +151,8 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+
+for_window [class="st.*"] border pixel 2 
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -168,13 +181,20 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# window colors
+#                       border              background         text                 indicator
+client.focused          $bg-color           $bg-color          $text-color          #00ff00
+client.unfocused        $inactive-bg-color  $inactive-bg-color $inactive-text-color #00ff00
+client.focused_inactive $inactive-bg-color  $inactive-bg-color $inactive-text-color #00ff00
+client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #00ff00
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
         status_command i3blocks -c ~/.config/i3/i3blocks/i3blocks.conf
 	colors {
 		background $inactive-bg-color
-		separator #757575
+	    	separator #757575
 		#                  border             background         text
 		focused_workspace  $bg-color          $bg-color          $text-color
 		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
@@ -190,8 +210,9 @@ exec --no-startup-id xautolock -locker "~/.config/i3/lock_screen.sh" -time 10 -d
 # set screenshot shortcut
 bindsym Print exec scrot '%Y-%m-%d-%s_screenshot_$wx$h.jpg' -e 'mv $f ~/Pictures/'
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 1 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 1 -5% #decrease sound volume
+bindsym XF86AudioRaiseVolume exec amixer -q set Master 2dB+ unmute
+bindsym XF86AudioLowerVolume exec amixer -q set Master 2dB- unmute
+bindsym XF86AudioMute exec amixer -q set Master toggle
 
 # Media player controls
 bindsym XF86AudioPlay exec playerctl play-pause
@@ -202,12 +223,12 @@ bindsym XF86AudioPrev exec playerctl previous
 exec_always --no-startup-id feh --bg-scale ~/Pictures/Sonstiges/wallpaper2.png
 
 #for tranparency (rofi/st)
-exec_always --no-startup-id compton -b --config ~/.config/compton.conf 
+exec --no-startup-id compton -b --config ~/.config/compton.conf 
 
 #for having st/xterm to load correct customizations
 exec_always --no-startup-id xrdb ~/.Xresources
 
 #for renaming i3 workspaces according to the terminal
-exec_always --no-startup-id ~/.config/i3/i3-renameworkspaces/i3-renameworkspaces.pl -c ~/.config/i3/i3-renameworkspaces/config
+#exec_always --no-startup-id ~/.config/i3/i3-renameworkspaces/i3-renameworkspaces.pl -c ~/.config/i3/i3-renameworkspaces/config
 
 
