--- a/.config/i3/i3-renameworkspaces/config
+++ b/.config/i3/i3-renameworkspaces/config
@@ -3,12 +3,8 @@
         "firefox": "Firefox ",
         "st": "<span foreground='teal'>Terminal </span>",
         "xterm": "<span foreground='teal'>XTerminal </span>",
-	"pwsafe":"<span foreground='DodgerBlue'>Pwsafe </span>",
-	"teams-for-linux":"<span background='BlueViolet' foreground='Gold'>Teams </span>",
         "chromium": "<span foreground='Green'>Chrome </span>",
-	"spotify":"<span background='#1DB054' foreground='white'>Spotify </span>",
-	"hiri":"Mail  ",
-	"code":"<span foreground='lime' background='darkblue'>VS Code </span>"
+	"Thunderbird":"Mail  ",
 	},    
     "instances": {
     }
