--- a/.config/i3/i3blocks/i3blocks.conf
+++ b/.config/i3/i3blocks/i3blocks.conf
@@ -39,6 +39,7 @@ instance=spotify
 interval=10
 signal=10
 separator=false
+color=#83d0c9
 #
 # Volume indicator
 #
@@ -51,6 +52,7 @@ instance=Master
 #instance=PCM
 interval=1
 signal=10
+color=#d083c9
 
 
 # Memory usage
@@ -58,21 +60,27 @@ signal=10
 # The type defaults to "mem" if the instance is not specified.
 [memory]
 label=
-interval=1
-color=#dfe3ee
+interval=2
 separator=false
+color=#00FF00
 
 [memory]
 label=
 instance=swap
-interval=1
-color=#dfe3ee
+interval=10
+color=#00FF00
 
 # Disk usage
 #
 # The directory defaults to $HOME if the instance is not specified.
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
+
+[sync]
+interval=5
+min_width=
+color=#00FF00
+separator=false
 
 [disk]
 label=
@@ -108,15 +116,16 @@ color=#00FF00
 
 [iface]
 label=
-instance=enp2s0
+instance=enp0s25
 color=#00FF00
 interval=10
 separator=false
 
 [bandwidth]
 label=
-instance=enp2s0
-interval=1
+instance=enp0s25
+min_width=2.5M 2.5M
+interval=2
 color=#83d0c9
 
 # Date Time
