--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
-.config/VirtualBox/*
-.config/google-chrome/*
-.ssh*
-/*
-!.gitignore
-!.bashrc
-!.vim/*
-!Pictures/wallpapers/*
-!.config/**/settings.json
+.Xauthority
+.bash_history
+.bash_logout
+.histfile
+.ssh/
+.thunderbird/
+.unison/
+.vim/
+.zsh_history
+mount_nas.sh
+unison.log
+unison_watch.sh
