Update to config and adding some new dotfiles

--- a/.config/i3/i3blocks/i3blocks.conf
+++ b/.config/i3/i3blocks/i3blocks.conf
@@ -59,13 +59,13 @@ color=#d083c9
 #
 # The type defaults to "mem" if the instance is not specified.
 [memory]
-label=
+label= 
 interval=2
 separator=false
 color=#00FF00
 
 [memory]
-label=
+label= 
 instance=swap
 interval=10
 color=#00FF00
@@ -83,7 +83,7 @@ color=#00FF00
 separator=false
 
 [disk]
-label=
+label= 
 instance=/home/julius
 interval=30
 color=#00FF00
@@ -94,7 +94,7 @@ color=#00FF00
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 
 [cpu_usage]
-label=
+label= 
 interval=1
 min_width= 100.00%
 separator=false
@@ -102,7 +102,7 @@ color=#00FF00
 
 [temperature]
 #label=TEMP
-label=🌡
+label= 
 interval=10
 color=#00FF00
 
@@ -115,7 +115,7 @@ color=#00FF00
 #color=#adff00
 
 [iface]
-label=
+label= 
 instance=enp0s25
 color=#00FF00
 interval=10
@@ -124,8 +124,8 @@ separator=false
 [bandwidth]
 label=
 instance=enp0s25
-min_width=2.5M 2.5M
-interval=2
+min_width=lllllllllllllllllllllllllllllllllll
+interval=1
 color=#83d0c9
 
 # Date Time
