--- a/.config/i3/config
+++ b/.config/i3/config
@@ -20,7 +20,7 @@ set $urgent-bg-color     #E53935
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:System San Francisco Display 10, pango:FontAwesome 10, Terminus 10
-font pango:System San Francisco Display 8
+font pango:System San Francisco Display 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -90,10 +90,10 @@ bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+< floating toggle
+bindsym $mod+Shift+less floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+< focus mode_toggle
+bindsym $mod+less focus mode_toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
@@ -113,7 +113,7 @@ set $ws4 "4"
 set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
-set $ws8 "8"
+set $ws8 "8 - Msg"
 set $ws9 "9 - Mail"
 set $ws10 "10 - Music"
 
@@ -146,6 +146,7 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 #assign [class="Firefox"] $ws2
 assign [class="KeePass2"] $ws3
 assign [class="Thunderbird"] $ws9
+assign [class="Signal"] $ws8
 for_window [class="Spotify"] move to workspace number $ws10
 
 # reload the configuration file
@@ -155,7 +156,9 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
-for_window [class="URxvt"] border pixel 2 
+for_window [class="St"] border pixel 2 
+for_window [class="Zathura"] border pixel 2 
+for_window [class="Signal"] border pixel 2 
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -224,15 +227,18 @@ bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
+#for tranparency (rofi/st)
+exec --no-startup-id ~/.screenlayout/home.sh
+
 #Wallpaper
-#exec_always --no-startup-id feh --bg-center ~/Pictures/Sonstiges/wallpaper2.png
+exec_always --no-startup-id feh --bg-center ~/Pictures/Sonstiges/wallpaper2.png
 
 #for tranparency (rofi/st)
 exec --no-startup-id compton -b --config ~/.config/compton.conf 
 
 #for having st/xterm to load correct customizations
 exec_always --no-startup-id xrdb ~/.Xresources
-exec_always setxkbmap de
+exec_always --no-startup-id setxkbmap de
 
 #for renaming i3 workspaces according to the terminal
 #exec_always --no-startup-id ~/.config/i3/i3-renameworkspaces/i3-renameworkspaces.pl -c ~/.config/i3/i3-renameworkspaces/config
