--- a/.config/i3/config
+++ b/.config/i3/config
@@ -20,7 +20,8 @@ set $urgent-bg-color     #E53935
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:System San Francisco Display 10, pango:FontAwesome 10, Terminus 10
-font pango:System San Francisco Display 9
+#font pango:System San Francisco Display 9
+font pango:System San Francisco Display 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -107,9 +108,9 @@ bindsym Mod1+Shift+Tab workspace prev
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 set $ws1 "1 - Terminals"
-set $ws2 "2 - Web"
+set $ws2 "2"
 set $ws3 "3 - KeePass"
-set $ws4 "4"
+set $ws4 "4 - Web"
 set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
@@ -213,14 +214,26 @@ bar {
 bindsym $mod+Shift+q exec ~/.config/i3/lock_screen.sh
 exec --no-startup-id xautolock -locker "~/.config/i3/lock_screen.sh" -time 10 -detectsleep -notify 10
 
+# Keybindings for the screen-brightness
+bindsym XF86MonBrightnessUp         exec --no-startup-id xbacklight +5
+bindsym XF86MonBrightnessDown       exec --no-startup-id xbacklight -5
+
+# Toggle TouchPad
+bindsym XF86Tools                   exec ~/.scripts/toggle_touchpad.sh
+
+bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
+
 # set screenshot shortcut
 bindsym Print exec scrot '%Y-%m-%d-%s_screenshot_$wx$h.jpg' -e 'mv $f ~/Pictures/'
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec amixer -q sset Master 2%+ unmute
-bindsym XF86AudioLowerVolume exec amixer -q sset Master 2%- unmute
+#bindsym XF86AudioRaiseVolume exec amixer -q sset Master 2%+ unmute
+#bindsym XF86AudioLowerVolume exec amixer -q sset Master 2%- unmute
+bindsym XF86AudioRaiseVolume exec --no-startup-id "pactl set-sink-volume @DEFAULT_SINK@ +5% && notify_sound"
+bindsym XF86AudioLowerVolume exec --no-startup-id "pactl set-sink-volume @DEFAULT_SINK@ -5% && notify_sound"
+bindsym XF86AudioMute exec --no-startup-id "pactl set-sink-mute @DEFAULT_SINK@ toggle && notify_sound"
 #bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 3 -- +5%
 #bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 3 -- +5%
-bindsym XF86AudioMute exec amixer -q set Master toggle
+#bindsym XF86AudioMute exec amixer -q set Master toggle
 
 # Media player controls
 bindsym XF86AudioPlay exec playerctl play-pause
