--- a/.config/i3/i3blocks/i3blocks_home.conf
+++ b/.config/i3/i3blocks/i3blocks_home.conf
@@ -154,9 +154,10 @@ interval=1
 #
 # bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
 # bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
-[keyindicator]
-interval=once
-signal=11
+#[keyindicator]
+#instance=CAPS
+#interval=once
+#signal=11
 
 #[keyindicator]
 #instance=NUM
