--- a/.config/i3/i3blocks/i3blocks_remote.conf
+++ b/.config/i3/i3blocks/i3blocks_remote.conf
@@ -82,9 +82,9 @@ min_width=
 color=#00FF00
 separator=false
 
-[disk]
+[btrfs]
 label= 
-instance=/home/julius
+instance=/mnt/data
 interval=30
 color=#00FF00
 
