Screenlayout and Redshift

--- a/.config/i3/i3blocks/i3blocks_home.conf
+++ b/.config/i3/i3blocks/i3blocks_home.conf
@@ -81,9 +81,9 @@ min_width=
 color=#00FF00
 separator=false
 
-[disk]
+[btrfs]
 label= 
-instance=/home/julius
+instance=/mnt/data
 interval=30
 color=#00FF00
 
@@ -105,12 +105,12 @@ label=
 interval=10
 color=#00FF00
 
-[iface]
-label= 
-instance=wlp3s0
-interval=10
-color=#00FF00
-separator=false
+#[iface]
+#label= 
+#instance=wlp3s0
+#interval=10
+#color=#00FF00
+#separator=false
 
 [iface]
 label= 
