First dotfile config for MacBook

--- a/.config/i3/i3blocks/i3blocks.conf
+++ b/.config/i3/i3blocks/i3blocks.conf
@@ -83,8 +83,8 @@ separator=false
 
 [disk]
 label= 
-instance=/home/julius
-interval=30
+instance=/home
+interval=60
 color=#00FF00
 
 # Network interface monitoring
@@ -101,22 +101,22 @@ color=#00FF00
 
 [temperature]
 #label=TEMP
+command=~/.config/i3/i3blocks/scripts/temperature --chip coretemp-isa-0000
 label= 
 interval=10
 color=#00FF00
 
-[iface]
-label= 
-instance=wlp3s0
-interval=10
+[battery]
+#label=TEMP
+label=
+interval=30
 color=#00FF00
-separator=false
 
 [iface]
-label= 
-instance=enp0s25
-color=#00FF00
+label= 
+instance=wlp1s0b1
 interval=10
+color=#00FF00
 separator=false
 
 [bandwidth]
@@ -129,7 +129,7 @@ color=#83d0c9
 # Date Time
 #
 [time]
-command=date '+%a %d.%m %H:%M:%S    '
+command=date '+%a %d.%m %H:%M:%S  '
 #command=timedatectl | grep Local | tr -s '[:space:]'
 interval=1
 
@@ -148,7 +148,6 @@ interval=1
 # bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
 # bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
 #[keyindicator]
-#instance=CAPS
 #interval=once
 #signal=11
 
