--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,9 +1,13 @@
+# Font for window titles. Will also be used by the bar unless a different font
+# is used in the bar {} block below.
+#font pango:System San Francisco Display 10, pango:FontAwesome 10, Terminus 10
+font pango:System San Francisco Display 6
 
 # First action: Load the right profile
-exec --no-startup-id /home/julius/.scripts/set_profile.sh
-bindsym XF86Display exec --no-startup-id /home/julius/.scripts/set_profile.sh
+#exec --no-startup-id /home/julius/.scripts/screenlayout.sh
+#bindsym XF86Display exec --no-startup-id /home/julius/.scripts/screenlayout.sh
 
-set $mod Mod1
+set $mod mod4
 
 set $bg-color 	         #3f444f
 set $inactive-bg-color   #1f242f
@@ -201,7 +205,7 @@ bar {
 # set the lockshortcut
 #bindsym Pause exec ~/.config/i3/lock_screen.sh
 bindsym $mod+Shift+q exec ~/.config/i3/lock_screen.sh
-exec --no-startup-id xautolock -locker "~/.config/i3/lock_screen.sh" -time 10 -detectsleep -notify 10
+#exec --no-startup-id xautolock -locker "~/.config/i3/lock_screen.sh" -time 10 -detectsleep -notify 10
 
 # Keybindings for the screen-brightness
 bindsym XF86MonBrightnessUp         exec --no-startup-id xbacklight +5
