--- a/.config/redshift/redshift.conf
+++ b/.config/redshift/redshift.conf
@@ -1,7 +1,7 @@
 ; Global settings for redshift
 [redshift]
 ; Set the day and night screen temperatures
-temp-day=5700
+; temp-day=6500
 temp-night=3000
 ; Set the screen brightness. Default is 1.0.
 ;brightness=0.9
