--- a/.config/redshift/redshift.conf
+++ b/.config/redshift/redshift.conf
@@ -9,6 +9,7 @@ temp-night=3000
 ; since version 1.8.
 brightness-day=1.0
 brightness-night=0.8
+location-provider=manual
 [manual]
 lat=48.8
 lon=11.34
