current mac config

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,1 +1,15 @@
 CheckHostIP no
+
+host pi
+Hostname raspberrypi.fritz.box
+User pi
+
+host hpc
+Hostname pproc-be.in.tum.de
+User ge49bay
+#IdentityFile ~/.ssh/id_rsa_uni
+
+host idp
+Hostname wib06-idp-1.vm.wi.tum.de
+User niedworok
+#IdentityFile ~/.ssh/id_rsa_uni
