--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,7 +1,7 @@
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:System San Francisco Display 10, pango:FontAwesome 10, Terminus 10
-font pango:System San Francisco Display 6
+font pango:System San Francisco Display 9
 
 # First action: Load the right profile
 #exec --no-startup-id /home/julius/.scripts/screenlayout.sh
@@ -208,8 +208,8 @@ bindsym $mod+Shift+q exec ~/.config/i3/lock_screen.sh
 #exec --no-startup-id xautolock -locker "~/.config/i3/lock_screen.sh" -time 10 -detectsleep -notify 10
 
 # Keybindings for the screen-brightness
-bindsym XF86MonBrightnessUp         exec --no-startup-id xbacklight +5
-bindsym XF86MonBrightnessDown       exec --no-startup-id xbacklight -5
+#bindsym XF86MonBrightnessUp         exec --no-startup-id xbacklight +5
+#bindsym XF86MonBrightnessDown       exec --no-startup-id xbacklight -5
 
 # Toggle TouchPad
 bindsym XF86Tools                   exec ~/.scripts/toggle_touchpad.sh
@@ -237,7 +237,7 @@ bindsym XF86AudioPrev exec playerctl previous
 exec_always --no-startup-id feh --bg-center ~/Pictures/Sonstiges/wallpaper2.png
 
 #for tranparency (rofi/st)
-exec --no-startup-id compton -b --config ~/.config/compton.conf 
+#exec --no-startup-id compton -b --config ~/.config/compton.conf 
 
 #for having st/xterm to load correct customizations
 exec_always --no-startup-id xrdb ~/.Xresources
