Current config of julius desktop

--- a/.ssh/config
+++ b/.ssh/config
@@ -4,6 +4,11 @@ host pi
 Hostname raspberrypi.fritz.box
 User pi
 
+host nas
+Hostname 192.168.4.113
+User admin
+Port 1822
+
 host hpc
 Hostname pproc-be.in.tum.de
 User ge49bay
