--- a/.config/i3/i3blocks/i3blocks.conf
+++ b/.config/i3/i3blocks/i3blocks.conf
@@ -35,6 +35,7 @@ markup=none
 # Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
 [mediaplayer]
 instance=spotify
+#instance=spotifyd
 interval=10
 signal=10
 separator=false
@@ -122,7 +123,7 @@ separator=false
 [bandwidth]
 label=
 #instance=enp0s25
-min_width=lllllllllllllllllllllllllllllllllll
+min_width=lllllllllllllllllllllllllllllllllll111111
 interval=1
 color=#83d0c9
 
