Adjusting sync script to use signals

--- a/.config/i3/i3blocks/i3blocks.conf
+++ b/.config/i3/i3blocks/i3blocks.conf
@@ -50,8 +50,8 @@ color=#83d0c9
 label=
 instance=Master
 #instance=PCM
-interval=1
-signal=10
+interval=once
+signal=2
 color=#d083c9
 
 
@@ -77,10 +77,11 @@ color=#00FF00
 # (defaults to 10 for 10%).
 
 [sync]
-interval=5
+interval=once
 min_width=
 color=#00FF00
 separator=false
+signal=1
 
 [disk]
 label= 
