--- a/.config/i3/config
+++ b/.config/i3/config
@@ -221,9 +221,9 @@ bindsym Print exec scrot '%Y-%m-%d-%s_screenshot_$wx$h.jpg' -e 'mv $f ~/Pictures
 # Pulse Audio controls
 #bindsym XF86AudioRaiseVolume exec amixer -q sset Master 2%+ unmute
 #bindsym XF86AudioLowerVolume exec amixer -q sset Master 2%- unmute
-bindsym XF86AudioRaiseVolume exec --no-startup-id "pactl set-sink-volume @DEFAULT_SINK@ +2% && notify_sound"
-bindsym XF86AudioLowerVolume exec --no-startup-id "pactl set-sink-volume @DEFAULT_SINK@ -2% && notify_sound"
-bindsym XF86AudioMute exec --no-startup-id "pactl set-sink-mute @DEFAULT_SINK@ toggle && notify_sound"
+bindsym XF86AudioRaiseVolume exec --no-startup-id "pactl set-sink-volume @DEFAULT_SINK@ +2% && pkill -RTMIN+2 i3blocks"
+bindsym XF86AudioLowerVolume exec --no-startup-id "pactl set-sink-volume @DEFAULT_SINK@ -2% && pkill -RTMIN+2 i3blocks"
+bindsym XF86AudioMute exec --no-startup-id "pactl set-sink-mute @DEFAULT_SINK@ toggle && pkill -RTMIN+2 i3blocks"
 #bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 3 -- +5%
 #bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 3 -- +5%
 #bindsym XF86AudioMute exec amixer -q set Master toggle
