Current version of Julius PC config

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -7,14 +7,14 @@ glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
 
 #avoid having St-terminals to render both contents, if i3 is in tab-mode
-opacity-rule = [
-  "95:class_g = 'St' && !_NET_WM_STATE@:32a",
-  "0:_NET_WM_STATE@[0]:32a *= '_NET_WM_STATE_HIDDEN'",
-  "0:_NET_WM_STATE@[1]:32a *= '_NET_WM_STATE_HIDDEN'",
-  "0:_NET_WM_STATE@[2]:32a *= '_NET_WM_STATE_HIDDEN'",
-  "0:_NET_WM_STATE@[3]:32a *= '_NET_WM_STATE_HIDDEN'",
-  "0:_NET_WM_STATE@[4]:32a *= '_NET_WM_STATE_HIDDEN'"
-];
+#opacity-rule = [
+#  "95:class_g = 'St' && !_NET_WM_STATE@:32a",
+#  "0:_NET_WM_STATE@[0]:32a *= '_NET_WM_STATE_HIDDEN'",
+#  "0:_NET_WM_STATE@[1]:32a *= '_NET_WM_STATE_HIDDEN'",
+#  "0:_NET_WM_STATE@[2]:32a *= '_NET_WM_STATE_HIDDEN'",
+#  "0:_NET_WM_STATE@[3]:32a *= '_NET_WM_STATE_HIDDEN'",
+#  "0:_NET_WM_STATE@[4]:32a *= '_NET_WM_STATE_HIDDEN'"
+#];
 
 #reger to archwiki/compton: this should avoid flicker
 unredir-if-possible=false
