--- a/.config/redshift/redshift.conf
+++ b/.config/redshift/redshift.conf
@@ -2,13 +2,14 @@
 [redshift]
 ; Set the day and night screen temperatures
 ; temp-day=6500
-temp-night=3000
+;temp-night=3000
+temp-night=4000
 ; Set the screen brightness. Default is 1.0.
 ;brightness=0.9
 ; It is also possible to use different settings for day and night
 ; since version 1.8.
 brightness-day=1.0
-brightness-night=0.7
+;brightness-night=0.7
 location-provider=manual
 [manual]
 lat=48.8
