--- a/.ssh/config
+++ b/.ssh/config
@@ -18,3 +18,8 @@ host idp
 Hostname wib06-idp-1.vm.wi.tum.de
 User niedworok
 IdentityFile ~/.ssh/id_rsa_uni
+
+host cmb
+Hostname emu02.cm.in.tum.de
+User niedworo
+IdentityFile ~/.ssh/id_rsa_uni
