Adding secret yaml to gitignore for security reasons

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,25 +1,9 @@
 CheckHostIP no
 
-host hassio
-Hostname hassio.fritz.box
-User pi
-
-host nas
-Hostname 192.168.4.113
-User admin
-Port 1822
-
-host hpc
-Hostname pproc-be.in.tum.de
-User ge49bay
-IdentityFile ~/.ssh/id_rsa_uni
-
-host idp
-Hostname wib06-idp-1.vm.wi.tum.de
-User niedworok
-IdentityFile ~/.ssh/id_rsa_uni
-
-host cmb
-Hostname emu02.cm.in.tum.de
-User niedworo
-IdentityFile ~/.ssh/id_rsa_uni
+Host radeberger-git
+Hostname gitlab.c00.k8s.rgag.net
+User git
+StrictHostKeyChecking no
+IdentityFile ~/.ssh/id_rsa_radeberger
+IdentitiesOnly yes
+UserKnownHostsFile=/dev/null
