Adding weather i3blocks script and other settings

--- a/.config/i3/i3blocks/i3blocks_nied.conf
+++ b/.config/i3/i3blocks/i3blocks_nied.conf
@@ -146,6 +146,12 @@ command=date '+%a %d.%m %H:%M:%S  '
 interval=1
 
 
+[weather]
+label=
+#command=timedatectl | grep Local | tr -s '[:space:]'
+interval=60
+color=#d083c9
+
 # OpenVPN support
 #
 # Support multiple VPN, with colors.
